button gap fixed

--- a/media/css/cms/flare-button.css
+++ b/media/css/cms/flare-button.css
@@ -5,7 +5,9 @@
 */
 
 .fl-button {
-    display: inline-block;
+    display: inline-flex;
+    gap: 0.5rem;
+    align-items: center;
     padding: calc(var(--scale-16) * 1px) calc(var(--scale-32) * 1px);
     font-family: var(--font-family-button);
     font-size: var(--font-size-base);
